--- a/trustpoint/templates/devices/credentials/issue_credential.html
+++ b/trustpoint/templates/devices/credentials/issue_credential.html
@@ -16,7 +16,7 @@
                     <h2>{{ section.heading }}</h2>
                     <hr>
                     <p>{{ section.description }}</p>
-                    <a href="{% url profile_select_url pk=device.pk  protocol=section.protocol %}" class="btn min-width-30{% if section.enabled == False %} btn-secondary disabled" disabled {% else %} btn-primary" {% endif %}>{{ section.heading }}</a>
+                    <a href="{% url section.url pk=device.pk %}" class="btn min-width-30{% if section.enabled == False %} btn-secondary disabled" disabled {% else %} btn-primary" {% endif %}>{{ section.heading }}</a>
                 </div>
                 {% endfor %}
 
