--- a/trustpoint/templates/help/deprecated/generic_details/application_credential_selection.html
+++ b/trustpoint/templates/help/deprecated/generic_details/application_credential_selection.html
@@ -30,14 +30,14 @@
                     <br>
                     <div class="d-flex flex-wrap align-items-start gap-2">
                         {% if device.device_type == device.DeviceType.OPC_UA_GDS %}
-                            <a href="{% url 'devices:opc_ua_gds_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opcua-client' %}"
+                            <a href="{% url 'devices:opc_ua_gds_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opc-ua-client' %}"
                                class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Client Credential" %}</a>
-                            <a href="{% url 'devices:opc_ua_gds_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opcua-server' %}"
+                            <a href="{% url 'devices:opc_ua_gds_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opc-ua-server' %}"
                                class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Server Credential" %}</a>
                         {% else %}
-                            <a href="{% url 'devices:devices_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opcua-client' %}"
+                            <a href="{% url 'devices:devices_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opc-ua-client' %}"
                                class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Client Credential" %}</a>
-                            <a href="{% url 'devices:devices_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opcua-server' %}"
+                            <a href="{% url 'devices:devices_help_dispatch_application_template' pk=device.id protocol=protocol certificate_template='opc-ua-server' %}"
                                class="btn btn-primary tp-table-btn min-width-20">{% trans "OPC UA Server Credential" %}</a>
                         {% endif %}
                         <div class="mb-5"></div>
