--- a/trustpoint/templates/help/deprecated/no_onboarding/est_username_password.html
+++ b/trustpoint/templates/help/deprecated/no_onboarding/est_username_password.html
@@ -22,7 +22,7 @@
                 <div class="tp-card-centered-content">
 
 
-                    {% if certificate_profile == 'tls-server' or certificate_profile == 'tls-client' or certificate_profile == 'opcua-client' or certificate_profile == 'opcua-server'%}
+                    {% if certificate_profile == 'tls-server' or certificate_profile == 'tls-client' or certificate_profile == 'opc-ua-client' or certificate_profile == 'opc-ua-server'%}
                         {% include 'help/deprecated/generic_details/est_notifications_block.html' with expected_allow_app_certs=True expected_allow_username_registration=False expected_username_auth=True expected_domain_auth=False %}
 
                         <h2>{% trans 'Summary' %}</h2>
@@ -41,10 +41,10 @@
                             {% include 'help/deprecated/generic_details/est_application_csr_tls_server.html' %}
                         {% elif certificate_profile == 'tls-client' %}
                             {% include 'help/deprecated/generic_details/est_application_csr_tls_client.html' %}
-                        {% elif certificate_profile == 'opcua-client' %}
-                            {% include 'help/deprecated/generic_details/est_application_csr_opcua_client.html' %}
-                        {% elif certificate_profile == 'opcua-server' %}
-                            {% include 'help/deprecated/generic_details/est_application_csr_opcua_server.html' %}
+                        {% elif certificate_profile == 'opc-ua-client' %}
+                            {% include 'help/deprecated/generic_details/est_application_csr_opc_ua_client.html' %}
+                        {% elif certificate_profile == 'opc-ua-server' %}
+                            {% include 'help/deprecated/generic_details/est_application_csr_opc_ua_server.html' %}
                         {% endif %}
 
                         <h2 class="mt-5">{% trans 'EST capabilities' %}</h2>
