--- a/trustpoint/templates/help/deprecated/onboarding/est_application_credentials.html
+++ b/trustpoint/templates/help/deprecated/onboarding/est_application_credentials.html
@@ -21,7 +21,7 @@
             <div class="card-body">
                 <div class="tp-card-centered-content">
 
-                    {% if certificate_template == 'tls-server' or certificate_template == 'tls-client' or certificate_template == 'opcua-client' or certificate_template == 'opcua-server'%}
+                    {% if certificate_template == 'tls-server' or certificate_template == 'tls-client' or certificate_template == 'opc-ua-client' or certificate_template == 'opc-ua-server'%}
                         {% include 'help/generic_details/est_notifications_block.html' with expected_allow_app_certs=True expected_allow_username_registration=False expected_username_auth=True expected_domain_auth=False %}
 
                         <h2>{% trans 'Summary' %}</h2>
@@ -35,10 +35,10 @@
                             {% include 'help/generic_details/est_application_csr_tls_server.html' %}
                         {% elif certificate_template == 'tls-client' %}
                             {% include 'help/generic_details/est_application_csr_tls_client.html' %}
-                        {% elif certificate_template == 'opcua-client' %}
-                            {% include 'help/generic_details/est_application_csr_opcua_client.html' %}
-                        {% elif certificate_template == 'opcua-server' %}
-                            {% include 'help/generic_details/est_application_csr_opcua_server.html' %}
+                        {% elif certificate_template == 'opc-ua-client' %}
+                            {% include 'help/generic_details/est_application_csr_opc_ua_client.html' %}
+                        {% elif certificate_template == 'opc-ua-server' %}
+                            {% include 'help/generic_details/est_application_csr_opc_ua_server.html' %}
                         {% endif %}
 
                         <h2 class="mt-5">{% trans 'Download or Copy the Trustpoint TLS Server Certificate' %}</h2>
