--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -21,11 +21,12 @@
                 <h2 class="d-flex justify-content-between align-items-center">
                     <span>{% trans "Issued Domain Credentials" %}</span>
                     {% if issue_domain_cred_onboarding_url %}
-                        <a href="{% url issue_domain_cred_onboarding_url pk=device.pk %}" class="btn btn-primary"
-                        style="width: 25rem;">
+                        <a href="{% url issue_domain_cred_onboarding_url pk=device.pk %}" class="btn btn-primary" style="width: 25rem;">
+                    {% else %}
+                        <a href="" class="btn btn-secondary disabled" style="width: 25rem;" disabled>
+                    {% endif %}
                             {% trans "Issue new Domain Credential" %}
                         </a>
-                    {% endif %}
                 </h2>
                 <hr>
                 <div class="mb-5">
@@ -93,16 +94,18 @@
 
                         {% if device.onboarding_config.onboarding_status == 1 %}
                             <a href=""
-                               class="btn btn-secondary pe-none"
-                               style="width: 25rem;" aria-disabled="true">
+                               class="btn btn-secondary disabled"
+                               style="width: 25rem;" disabled>
                                 {% trans "Issue new Application Credential" %}
                             </a>
                         {% else %}
                             {% if issue_app_cred_no_onboarding_url %}
-                                <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary min-width-25">
+                                <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary" style="width: 25rem;">
+                            {% else %}
+                                <a href="" class="btn btn-secondary disabled" style="width: 25rem;" disabled>
+                            {% endif %}
                                     {% trans 'Issue New Application Credential' %}
                                 </a>
-                            {% endif %}
                         {% endif %}
                         
                     </h2>
@@ -119,10 +122,12 @@
                     <h2 class="d-flex justify-content-between align-items-center">
                         <span>{% trans "Issued Application Credentials" %}</span>
                             {% if issue_app_cred_no_onboarding_url %}
-                                <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary min-width-25">
+                                <a href="{% url issue_app_cred_no_onboarding_url pk=device.pk %}" class="btn btn-primary" style="width: 25rem;">
+                            {% else %}
+                                <a href="" class="btn btn-secondary disabled" style="width: 25rem;">
+                            {% endif %}
                                     {% trans 'Issue New Application Credential' %}
                                 </a>
-                            {% endif %}
                     </h2>
 
             {% else %}
