re-attached manual application cert issuance

--- a/trustpoint/templates/devices/credentials/profile_select.html
+++ b/trustpoint/templates/devices/credentials/profile_select.html
@@ -13,15 +13,9 @@
             <div class="card-body">
                 <div class="tp-card-centered-content">
                     <p>{% trans 'Please select the type of application credential you wish to issue.' %}</p>
-                    {% if help_url %}
-                        {% for cert_profile in cert_profiles %}
-                            <a href="{% url help_url pk=device.pk certificate_template=cert_profile.profile %}" class="btn btn-primary mb-3" style="width: 20rem;">{{ cert_profile.label }}</a><br>
+                        {% for certificate_profile in certificate_profiles %}
+                            <a href="{% url certificate_profile.url pk=device.pk %}" class="btn btn-primary mb-3" style="width: 20rem;">{{ certificate_profile.label }}</a><br>
                         {% endfor %}
-                    {% else %}
-                        {% for manual_option in manual_options %}
-                            <a href="{% url manual_option.url pk=device.pk %}" class="btn btn-primary mb-3" style="width: 20rem;">{{ manual_option.profile }}</a><br>
-                        {% endfor %}
-                    {% endif %}
 
                 </div>
 
