--- a/trustpoint/templates/setup_wizard/select_tls_server_credential.html
+++ b/trustpoint/templates/setup_wizard/select_tls_server_credential.html
@@ -33,17 +33,16 @@
         <div class="card-body pt-3 pb-4">
             <h2>{% trans 'Configure TLS-Server Credential' %}</h2>
             <hr class="mb-4">
-            <a href="{% url 'setup_wizard:generate_tls_server_credential' %}" class="btn btn-primary d-flex justify-content-center">{% trans 'Generate Self-Signed TLS-Server Credential' %}</a>
-            <br>
-            <a href="#" class="btn btn-secondary d-flex justify-content-center disabled" aria-disabled="true"
-               style="pointer-events: none; cursor: not-allowed;">
-                {% trans 'Import TLS-Server Credential From File' %}
-            </a>
-        </div>
-        
-        <div class="card-body pt-3 pb-4">
-            <hr class="mb-4">
-            <a href="{% url 'setup_wizard:options' %}" class="btn btn-primary d-flex justify-content-center">{% trans 'Restore from backup' %}</a>
+            <form method="post">
+                {% csrf_token %}
+                <button type="submit" name="generate_credential" class="btn btn-primary d-flex justify-content-center">
+                    {% trans 'Generate Self-Signed TLS-Server Credential' %}
+                </button>
+                <br>
+                <button type="submit" name="import_credential" class="btn btn-secondary d-flex justify-content-center disabled" aria-disabled="true" disabled style="pointer-events: none; cursor: not-allowed;">
+                    {% trans 'Import TLS-Server Credential From File' %}
+                </button>
+            </form>
         </div>
     </div>
 
