--- a/trustpoint/templates/management/help.html
+++ b/trustpoint/templates/management/help.html
@@ -134,7 +134,7 @@
                         View Software Bill of Materials (SBOM)
                     </h5>
                     <p class="text-muted">See the list of packages used in this project.</p>
-                    <a href="https://github.com/Trustpoint-Project/trustpoint/blob/main/sbom_cyclonedx.json" 
+                    <a href="https://github.com/Trustpoint-Project/trustpoint/actions/workflows/sbom.yml" 
                        target="_blank" class="btn btn-primary" aria-label="View the CycloneDX SBOM on GitHub">
                         Download SBOM
                     </a>
