--- a/trustpoint/templates/workflows/definition_wizard.html
+++ b/trustpoint/templates/workflows/definition_wizard.html
@@ -74,7 +74,11 @@
           <pre id="json-preview" class="bg-light p-2"></pre>
         </div>
       </div>
-      <button id="save-btn" class="btn btn-success w-100">Save Workflow</button>
+
+      <div class="d-grid gap-2">
+        <button id="save-draft-btn" class="btn btn-outline-secondary">Save Draft</button>
+        <button id="publish-btn"    class="btn btn-success">Publish</button>
+      </div>
     </div>
   </div>
 </div>
