Apply dark theme to workflow

--- a/trustpoint/templates/workflows/definition_list.html
+++ b/trustpoint/templates/workflows/definition_list.html
@@ -13,7 +13,7 @@
 </div>
 
   <table class="table table-hover align-middle">
-    <thead class="table-light">
+    <thead class="table">
       <tr>
         <th>Name</th>
         <th>Last Updated</th>
