--- a/trustpoint/templates/workflows/definition_wizard.html
+++ b/trustpoint/templates/workflows/definition_wizard.html
@@ -71,7 +71,7 @@
       <div class="card mb-3">
         <div class="card-header">JSON Preview</div>
         <div class="card-body p-2" style="max-height:80vh; overflow:auto;">
-          <pre id="json-preview" class="bg-light p-2"></pre>
+          <pre id="json-preview" class="bg p-2"></pre>
         </div>
       </div>
 
